articore_runtime/include/articore/runtime_abi.h

typedef struct ArticoreRuntime ArticoreRuntime;
typedef struct ArticoreGravityProductBinding {
  // Caller initializes this to sizeof(ArticoreGravityProductBinding).
  uint32_t struct_size;
  // Runtime transport side whose seven arm joints use this model.
  uint32_t runtime_side;
  // Physical product side: ARTICORE_ROBOT_LEFT or ARTICORE_ROBOT_RIGHT.
  uint32_t robot_side;
  char product_id[64];
} ArticoreGravityProductBinding;
typedef struct ArticoreGravityCompensationConfig {
  // Caller initializes this to sizeof(ArticoreGravityCompensationConfig).
  uint32_t struct_size;
  // Zero selects the product default of 500 ms.
  uint32_t transition_ms;
} ArticoreGravityCompensationConfig;
typedef struct ArticoreGravityCompensationStatus {
  // Caller initializes this to sizeof(ArticoreGravityCompensationStatus).
  uint32_t struct_size;
  int32_t phase;
  int32_t active;
  float transition_progress;
  uint64_t control_cycles;
  uint32_t joint_count;
  void* joints[ARTICORE_MAX_MIT_TORQUE_LIMIT_JOINTS];
  // Final motor-domain gravity feedforward from the latest sent cycle.
  float gravity_feedforward_torque[ARTICORE_MAX_MIT_TORQUE_LIMIT_JOINTS];
} ArticoreGravityCompensationStatus;
typedef struct ArticorePosVelCommand {
  void* motor;
  float target_position;
  float velocity_limit;
} ArticorePosVelCommand;
typedef struct ArticoreMitCommand {
  void* motor;
  float target_position;
  float target_velocity;
  float stiffness;
  float damping;
  float feedforward_torque;
} ArticoreMitCommand;
typedef struct ArticoreGripperCommand {
  // Caller initializes this to sizeof(ArticoreGripperCommand).
  uint32_t struct_size;
  void* motor;
  // Product-independent opening scale: 0=closed, 1000=open.
  float opening;
  // Product-independent speed scale: (0, 1000], where 1000 is the calibrated
  // maximum speed in the motor descriptor.
  float speed;
  int32_t force_level;
} ArticoreGripperCommand;
typedef struct ArticoreGripperProductBinding {
  // Caller initializes this to sizeof(ArticoreGripperProductBinding).
  uint32_t struct_size;
  void* motor;
  // NUL-terminated built-in profile identifier. Runtime copies this value;
  // no caller-owned string lifetime is retained.
  char profile_id[64];
} ArticoreGripperProductBinding;
typedef struct ArticoreJointControlConfig {
  void* motor;
  float lower_position;
  float upper_position;
  float velocity_limit;
  float torque_limit;
  float mit_kp;
  float mit_kd;
  float mit_feedforward_torque;
} ArticoreJointControlConfig;
typedef struct ArticoreJointSafetyLimits {
  // Caller initializes this to sizeof(ArticoreJointSafetyLimits).
  uint32_t struct_size;
  void* motor;
  float hard_lower_position;
  float hard_upper_position;
  float soft_lower_position;
  float soft_upper_position;
  float soft_limit_braking_zone;
  // Positive magnitude used by d_stop = velocity^2 / (2 * acceleration).
  float braking_acceleration;
} ArticoreJointSafetyLimits;
typedef struct ArticoreMotorIdentity {
  // Caller initializes this to sizeof(ArticoreMotorIdentity).
  uint32_t struct_size;
  void* motor;
  // Damiao motor identity carried by decoded feedback (0..255).
  uint32_t can_id;
} ArticoreMotorIdentity;
typedef struct ArticoreConnectReport {
  // Caller initializes this to sizeof(ArticoreConnectReport).
  uint32_t struct_size;
  int32_t success;
  int32_t error_code;
  uint32_t expected_count;
  uint32_t received_count;
  uint32_t missing_count;
  uint32_t failure_count;
  uint32_t channel_count;
  ArticoreConnectChannelResult channels[2];
  uint32_t motor_count;
  ArticoreConnectMotorResult motors[32];
  char error[512];
} ArticoreConnectReport;
typedef struct ArticoreEnableReport {
  // Caller initializes this to sizeof(ArticoreEnableReport).
  uint32_t struct_size;
  int32_t success;
  int32_t disable_confirmed;
  uint32_t expected_count;
  uint32_t enabled_count;
  uint32_t missing_count;
  uint32_t failure_count;
  uint8_t missing_motor_sides[32];
  uint32_t missing_motor_ids[32];
  uint32_t motor_count;
  ArticoreEnableMotorResult motors[32];
  char error[512];
} ArticoreEnableReport;
typedef struct ArticoreDisableReport {
  // Caller initializes this to sizeof(ArticoreDisableReport).
  uint32_t struct_size;
  int32_t success;
  int32_t barrier_confirmed;
  uint32_t expected_count;
  uint32_t disabled_count;
  uint32_t missing_count;
  uint32_t failure_count;
  uint32_t retry_count;
  uint8_t missing_motor_sides[32];
  uint32_t missing_motor_ids[32];
  uint32_t motor_count;
  ArticoreDisableMotorResult motors[32];
  char error[512];
} ArticoreDisableReport;
typedef int32_t (*ArticoreControllerCallFn)(void*);
typedef struct ArticoreMotorApi {
  ArticoreGroupSendPosVelFn group_send_pos_vel;
  ArticoreGroupSendMitFn group_send_mit;
  ArticoreControllerCallFn controller_disable_all;
  ArticoreControllerFeedbackFn controller_request_feedback_all_ex;
  ArticoreMotorGetStateFn motor_get_state;
  ArticoreMotorGetFeedbackStatsFn motor_get_feedback_stats;
  ArticoreLastErrorFn last_error_message;
  ArticoreControllerTransportHealthFn controller_get_transport_health;
  ArticoreControllerCallFn motor_disable;
} ArticoreMotorApi;
typedef struct ArticoreRuntimeTransportCapabilities {
  // Caller initializes this to sizeof(ArticoreRuntimeTransportCapabilities).
  uint32_t struct_size;
  uint32_t side;
  int32_t can_fd;
  int32_t can_fd_brs;
  char transport[32];
} ArticoreRuntimeTransportCapabilities;
typedef struct ArticoreRuntimeConfig {
  uint32_t control_hz;
  uint32_t command_timeout_ms;
  uint32_t enable_grace_ms;
  uint32_t safe_hold_hz;
  uint32_t feedback_check_hz;
  uint32_t feedback_failure_threshold;
  uint32_t feedback_max_age_ms;
  uint32_t safe_hold_failure_threshold;
  uint32_t disable_feedback_timeout_ms;
  float safe_pv_velocity_limit;
  // Retained for ABI compatibility. Normal gripper control follows
  // control_hz; safe gripper holding follows safe_hold_hz.
  uint32_t gripper_control_hz;
  int32_t gripper_fault_action;
} ArticoreRuntimeConfig;
typedef struct ArticoreMotorDescriptor {
  void* motor;
  uint8_t side;
  uint8_t is_gripper;
  char name[64];
  float safe_kp;
  float safe_kd;
  float overload_torque;
  float retreat_distance;
  float contact_torque;
  uint32_t motion_window_ms;
  float stall_movement;
  float min_position_error;
  uint32_t contact_hold_ms;
  uint32_t overload_hold_ms;
  float hold_offset;
  uint32_t retreat_retry_ms;
  float open_position;
  float closed_position;
  float normal_kp;
  float normal_kd;
  float close_speed;
  uint32_t max_step_interval_ms;
  float closing_direction;
  float lower_position;
  float upper_position;
} ArticoreMotorDescriptor;
typedef struct ArticoreSafetyHealth {
  int32_t state;
  int32_t safe_holding;
  int32_t disable_confirmed;
  uint64_t last_successful_command_age_ns;
  uint64_t last_fresh_feedback_age_ns;
  uint32_t consecutive_send_failures;
  uint32_t consecutive_feedback_failures;
  ArticoreTransportHealth left_transport;
  ArticoreTransportHealth right_transport;
  uint32_t gripper_count;
  ArticoreGripperHealth grippers[2];
  uint32_t motor_fault_count;
  char motor_faults[32][64];
  uint32_t unconfirmed_disable_count;
  char unconfirmed_disable[32][64];
  char fault_reason[512];
} ArticoreSafetyHealth;
typedef struct ArticoreMitTorqueLimitStats {
  // Caller initializes this to sizeof(ArticoreMitTorqueLimitStats).
  uint32_t struct_size;
  // Number of successfully transmitted native control cycles in which at
  // least one arm joint required limiting.
  uint64_t torque_limit_activation_count;
  // Bit i describes joints[i] from the most recently transmitted MIT arm
  // batch. A set bit means that joint was limited in that cycle.
  uint64_t torque_limited_joint_mask;
  uint32_t joint_count;
  void* joints[ARTICORE_MAX_MIT_TORQUE_LIMIT_JOINTS];
  // Values use the motor command/feedback torque domain used by the native
  // MIT protocol after any product range mapping performed by the caller.
  float requested_resultant_torque[ARTICORE_MAX_MIT_TORQUE_LIMIT_JOINTS];
  float applied_scale[ARTICORE_MAX_MIT_TORQUE_LIMIT_JOINTS];
  float applied_resultant_torque[ARTICORE_MAX_MIT_TORQUE_LIMIT_JOINTS];
} ArticoreMitTorqueLimitStats;
// Returns the immutable rate actually used by the native worker. This can be
// lower than the requested config rate when a dual-arm runtime is capped to
// its transport-specific verified limit.
ARTICORE_RUNTIME_API int32_t articore_runtime_get_control_hz(
    ArticoreRuntime* runtime, uint32_t* control_hz);
// ABI 1.4 entry point. The two additive callbacks let the product runtime own
// native enable without creating a shared-library dependency on libmotor_abi.
// Language bindings pass motor_controller_enable_all and motor_handle_enable.
ARTICORE_RUNTIME_API ArticoreRuntime* articore_runtime_create_ex(
    const ArticoreRuntimeConfig* config,
    const ArticoreMotorApi* motor_api,
    void* controller_group,
    void* left_controller,
    void* right_controller,
    const ArticoreMotorDescriptor* motors,
    uint32_t motor_count,
    ArticoreControllerCallFn controller_enable_all,
    ArticoreControllerCallFn motor_enable);
// ABI 2.5 entry point. Official bindings provide exactly one immutable
// capability record for each active side. Legacy creation entry points pass
// no records and retain the conservative 400 Hz dual-arm limit.
ARTICORE_RUNTIME_API ArticoreRuntime* articore_runtime_create_ex2(
    const ArticoreRuntimeConfig* config,
    const ArticoreMotorApi* motor_api,
    void* controller_group,
    void* left_controller,
    void* right_controller,
    const ArticoreMotorDescriptor* motors,
    uint32_t motor_count,
    ArticoreControllerCallFn controller_enable_all,
    ArticoreControllerCallFn motor_enable,
    const ArticoreRuntimeTransportCapabilities* transport_capabilities,
    uint32_t transport_capability_count);
ARTICORE_RUNTIME_API void articore_runtime_free(ArticoreRuntime* runtime);
// Configures the immutable CAN identity of every Runtime motor. The complete
// active motor set must be supplied before connect(); IDs must be unique within
// a channel. This additive call preserves compatibility for legacy embedders,
// while official bindings always configure identities.
ARTICORE_RUNTIME_API int32_t articore_runtime_configure_motor_identities(
    ArticoreRuntime* runtime,
    const ArticoreMotorIdentity* identities,
    uint32_t identity_count);
ARTICORE_RUNTIME_API int32_t articore_runtime_get_last_connect_report(
    ArticoreRuntime* runtime, ArticoreConnectReport* report);
// With ARTICORE_CAP_ATOMIC_ENABLE this owns the complete native transaction:
// fresh disabled-state position capture, parallel controller enable, immediate
// current-position hold, parallel enabled-feedback confirmation, and linked
// disable rollback on every failure. SDKs must not enable motors beforehand.
ARTICORE_RUNTIME_API int32_t articore_runtime_enable(
    ArticoreRuntime* runtime, int32_t mode);
// Returns the stable result of the most recent native enable transaction.
// This remains available after enable fails and rolls every motor back to the
// disabled state.
ARTICORE_RUNTIME_API int32_t articore_runtime_get_last_enable_report(
    ArticoreRuntime* runtime, ArticoreEnableReport* report);
// Configures every active arm joint before connect so ordinary and raw Runtime
// commands use explicit position, velocity and torque limits.
ARTICORE_RUNTIME_API int32_t articore_runtime_configure_joints(
    ArticoreRuntime* runtime,
    const ArticoreJointControlConfig* configs,
    uint32_t config_count);
// ABI 1.9 layered joint limits. This additive configuration keeps the legacy
// ArticoreJointControlConfig layout stable. It must cover every active arm
// joint and be called after configure_joints(), before connect().
ARTICORE_RUNTIME_API int32_t articore_runtime_configure_joint_safety_limits(
    ArticoreRuntime* runtime,
    const ArticoreJointSafetyLimits* limits,
    uint32_t limit_count);
// Binds each active seven-axis arm transport side to its built-in rigid-body
// model. Bindings are immutable after connect and must cover every arm side.
ARTICORE_RUNTIME_API int32_t articore_runtime_configure_gravity_products(
    ArticoreRuntime* runtime,
    const ArticoreGravityProductBinding* bindings,
    uint32_t binding_count);
// Starts a Runtime-owned MIT hand-guiding mode. While active, ordinary arm
// commands are rejected and every native control cycle sends zero-stiffness,
// zero-damping gravity feedforward. A null config selects the 500 ms default.
ARTICORE_RUNTIME_API int32_t articore_runtime_start_gravity_compensation(
    ArticoreRuntime* runtime,
    const ArticoreGravityCompensationConfig* config);
// Smoothly hands gravity feedforward back to a current-position MIT hold.
ARTICORE_RUNTIME_API int32_t articore_runtime_stop_gravity_compensation(
    ArticoreRuntime* runtime);
ARTICORE_RUNTIME_API int32_t articore_runtime_get_gravity_compensation_status(
    ArticoreRuntime* runtime,
    ArticoreGravityCompensationStatus* status);
// ABI 1.5 entry points. HOLD_UNTIL_REPLACED is intended for one-shot position
// setpoints whose physical motion may legitimately exceed command_timeout_ms.
// Persistent MIT setpoints require target_velocity=0 and
// feedforward_torque=0; ongoing velocity/feedforward control must be STREAMING.
ARTICORE_RUNTIME_API int32_t articore_runtime_submit_pos_vel_ex(
    ArticoreRuntime* runtime,
    const ArticorePosVelCommand* commands,
    uint32_t command_count,
    int32_t lifetime);
ARTICORE_RUNTIME_API int32_t articore_runtime_submit_mit_ex(
    ArticoreRuntime* runtime,
    const ArticoreMitCommand* commands,
    uint32_t command_count,
    int32_t lifetime);
// ABI 2.2 product binding. Every active gripper must be covered exactly once
// before connect. No binding is required when the runtime has no grippers.
// The built-in yunyi_gripper_v1 profile owns opening conversion, motion ramp,
// contact/stall/overload protection, retreat behavior, ten force levels, gains,
// and fault action.
ARTICORE_RUNTIME_API int32_t articore_runtime_configure_gripper_products(
    ArticoreRuntime* runtime,
    const ArticoreGripperProductBinding* bindings,
    uint32_t binding_count);
// Atomically replaces the complete active gripper command set. Opening and
// closing both use a bounded Runtime-generated position ramp. Changing speed
// or force level takes effect together on the next native control cycle.
ARTICORE_RUNTIME_API int32_t articore_runtime_set_gripper_commands(
    ArticoreRuntime* runtime,
    const ArticoreGripperCommand* commands,
    uint32_t command_count);
ARTICORE_RUNTIME_API int32_t articore_runtime_report_feedback_failure(
    ArticoreRuntime* runtime, uint8_t side, const char* reason);
// Returns the structured result of the most recent deterministic disable or
// close transaction, including channel/motor identity for every motor whose
// fresh disabled state could not be confirmed.
ARTICORE_RUNTIME_API int32_t articore_runtime_get_last_disable_report(
    ArticoreRuntime* runtime, ArticoreDisableReport* report);
// Latches FAULT and torque-disables all arm joints. Grippers follow the
// configured product estop action (hold or disable).
ARTICORE_RUNTIME_API int32_t articore_runtime_estop(
    ArticoreRuntime* runtime, const char* reason);
ARTICORE_RUNTIME_API int32_t articore_runtime_get_health(
    ArticoreRuntime* runtime, ArticoreSafetyHealth* health);
// Returns the cumulative activation counter and the latest successfully sent
// MIT arm cycle. Statistics are updated for both newly consumed mailbox
// targets and native cycles that repeat the previous target.
ARTICORE_RUNTIME_API int32_t articore_runtime_get_mit_torque_limit_stats(
    ArticoreRuntime* runtime, ArticoreMitTorqueLimitStats* stats);
// Declares roles omitted from the active motor descriptor set. This is only
// valid while DISCONNECTED and is intended for Optional/Disabled model roles.
// Active descriptor names are registered as PRESENT automatically.
ARTICORE_RUNTIME_API int32_t articore_runtime_declare_motor_presence(
    ArticoreRuntime* runtime, const char* motor_role, int32_t state);
ARTICORE_RUNTIME_API int32_t articore_runtime_motor_presence(
    ArticoreRuntime* runtime, const char* motor_role, int32_t* state);
// Returns ArticoreActiveCapability bits for the fixed motor set discovered for
// this connection. Faulted motors remain active; NotInstalled motors do not.
ARTICORE_RUNTIME_API uint64_t articore_runtime_active_capabilities(
    ArticoreRuntime* runtime);
ARTICORE_RUNTIME_API const char* articore_runtime_last_error(void);