bindings/python/src/motor_drive_layer/_runtime_abi.py


    def _bind(self) -> None:
        lib = self.lib
        lib.articore_runtime_last_error.restype = c_char_p
        lib.articore_runtime_create_ex.argtypes = [
            POINTER(CRuntimeConfig), POINTER(CRuntimeMotorApi), c_void_p, c_void_p,
            c_void_p, POINTER(CRuntimeMotorDescriptor), c_uint32, c_void_p, c_void_p,
        ]
        lib.articore_runtime_create_ex.restype = c_void_p
        self.has_transport_aware_create = hasattr(
            lib, "articore_runtime_create_ex2"
        )
        if self.has_transport_aware_create:
            lib.articore_runtime_create_ex2.argtypes = [
                POINTER(CRuntimeConfig), POINTER(CRuntimeMotorApi), c_void_p,
                c_void_p, c_void_p, POINTER(CRuntimeMotorDescriptor), c_uint32,
                c_void_p, c_void_p, POINTER(CRuntimeTransportCapabilities),
                c_uint32,
            ]
            lib.articore_runtime_create_ex2.restype = c_void_p
        lib.articore_runtime_free.argtypes = [c_void_p]
        for name in ("connect", "disable", "recover", "close"):
            function = getattr(lib, f"articore_runtime_{name}")
            function.argtypes = [c_void_p]
            function.restype = c_int32
        lib.articore_runtime_enable.argtypes = [c_void_p, c_int32]
        lib.articore_runtime_enable.restype = c_int32
        lib.articore_runtime_estop.argtypes = [c_void_p, c_char_p]
        lib.articore_runtime_estop.restype = c_int32
        lib.articore_runtime_get_control_hz.argtypes = [c_void_p, POINTER(c_uint32)]
        lib.articore_runtime_get_control_hz.restype = c_int32
        lib.articore_runtime_get_health.argtypes = [c_void_p, POINTER(CSafetyHealth)]
        lib.articore_runtime_get_health.restype = c_int32
        lib.articore_runtime_get_mit_torque_limit_stats.argtypes = [
            c_void_p, POINTER(CMitTorqueLimitStats)
        ]
        lib.articore_runtime_get_mit_torque_limit_stats.restype = c_int32
        lib.articore_runtime_get_last_enable_report.argtypes = [c_void_p, POINTER(CEnableReport)]
        lib.articore_runtime_get_last_enable_report.restype = c_int32
        lib.articore_runtime_get_last_disable_report.argtypes = [c_void_p, POINTER(CDisableReport)]
        lib.articore_runtime_get_last_disable_report.restype = c_int32
        lib.articore_runtime_configure_motor_identities.argtypes = [c_void_p, POINTER(CMotorIdentity), c_uint32]
        lib.articore_runtime_configure_motor_identities.restype = c_int32
        lib.articore_runtime_get_last_connect_report.argtypes = [c_void_p, POINTER(CConnectReport)]
        lib.articore_runtime_get_last_connect_report.restype = c_int32
        lib.articore_runtime_configure_joints.argtypes = [c_void_p, POINTER(CJointControlConfig), c_uint32]
        lib.articore_runtime_configure_joints.restype = c_int32
        lib.articore_runtime_configure_joint_safety_limits.argtypes = [c_void_p, POINTER(CJointSafetyLimits), c_uint32]
        lib.articore_runtime_configure_joint_safety_limits.restype = c_int32
        lib.articore_runtime_configure_gripper_products.argtypes = [c_void_p, POINTER(CGripperProductBinding), c_uint32]
        lib.articore_runtime_configure_gripper_products.restype = c_int32
        lib.articore_runtime_configure_gravity_products.argtypes = [c_void_p, POINTER(CGravityProductBinding), c_uint32]
        lib.articore_runtime_configure_gravity_products.restype = c_int32
        lib.articore_runtime_start_gravity_compensation.argtypes = [c_void_p, POINTER(CGravityCompensationConfig)]
        lib.articore_runtime_start_gravity_compensation.restype = c_int32
        lib.articore_runtime_stop_gravity_compensation.argtypes = [c_void_p]
        lib.articore_runtime_stop_gravity_compensation.restype = c_int32
        lib.articore_runtime_get_gravity_compensation_status.argtypes = [c_void_p, POINTER(CGravityCompensationStatus)]
        lib.articore_runtime_get_gravity_compensation_status.restype = c_int32
        lib.articore_runtime_set_gripper_commands.argtypes = [c_void_p, POINTER(CGripperCommand), c_uint32]
        lib.articore_runtime_set_gripper_commands.restype = c_int32
        for name in ("set_joint_pv", "set_joint_mit"):
            function = getattr(lib, f"articore_runtime_{name}")
            function.argtypes = [c_void_p, POINTER(CJointTarget), c_uint32, c_float]
            function.restype = c_int32
        lib.articore_runtime_submit_pos_vel_ex.argtypes = [c_void_p, POINTER(CPosVelCommand), c_uint32, c_int32]
        lib.articore_runtime_submit_pos_vel_ex.restype = c_int32
        lib.articore_runtime_submit_mit_ex.argtypes = [c_void_p, POINTER(CMitCommand), c_uint32, c_int32]
        lib.articore_runtime_submit_mit_ex.restype = c_int32
        lib.articore_runtime_report_feedback_failure.argtypes = [c_void_p, c_uint8, c_char_p]
        lib.articore_runtime_report_feedback_failure.restype = c_int32
        lib.articore_runtime_declare_motor_presence.argtypes = [c_void_p, c_char_p, c_int32]
        lib.articore_runtime_declare_motor_presence.restype = c_int32
        lib.articore_runtime_motor_presence.argtypes = [c_void_p, c_char_p, POINTER(c_int32)]
        lib.articore_runtime_motor_presence.restype = c_int32
        lib.articore_runtime_active_capabilities.argtypes = [c_void_p]
        lib.articore_runtime_active_capabilities.restype = c_uint64


_runtime_abi: RuntimeAbi | None = None


def get_runtime_abi() -> RuntimeAbi:
    global _runtime_abi
    if _runtime_abi is None:
        _runtime_abi = RuntimeAbi()
    return _runtime_abi
